<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg_anim"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/robotic_dog"
                android:layout_marginLeft="40dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="3dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/robologo" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="28sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/pulse" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/work"
                    android:textColor="#ECEFF1"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="461dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:autoLink="all"
                    android:text="@string/number"
                    android:textColor="@android:color/white"
                    android:textColorLink="#FFFFFF"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="88dp"
                    tools:layout_editor_absoluteY="371dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/map" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:autoLink="all"
                    android:text="@string/address"
                    android:textColor="@android:color/white"
                    android:textColorLink="#FFFFFF"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="461dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:autoLink="web"
                    android:text="@string/web"
                    android:textColorLink="#FFFFFF"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="461dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>